# aglet

./: .gitignore  Cargo.toml
.agents/artifacts/: map-7e3ea699-1500-4567-b440-42fdd5a72eaa.md
.agents/commits/: 87c534b9-a5e9-47a2-aa08-44675c3aee10.json  ad594a14-9c49-459d-a6fb-3c578f5f1ae4.json  b2279a20-d292-477a-9ca1-5c52c2f0c527.json
src/: error.rs  execute.rs  main.rs  prov.rs
src/adapters/: claude.rs  mod.rs  openai.rs
src/commands/: mod.rs
src/commands/checkpoint/: mod.rs
src/commands/context/: mod.rs
src/commands/init/: mod.rs
src/commands/log/: mod.rs
src/commands/merge/: mod.rs
src/commands/policy/: mod.rs  store.rs
src/commands/policy/add/: mod.rs
src/commands/policy/edit/: mod.rs
src/commands/policy/list/: mod.rs
src/commands/policy/show/: mod.rs
src/commands/run/: mod.rs  store.rs
src/commands/show/: mod.rs
src/utils/: fs.rs  git.rs
src/workspace/: store.rs
